2006-04-12  Douglas Bates  <bates@stat.wisc.edu>

	* R/pedigree.R, R/AllClass.R, NAMESPACE: added a pedigree class
	and methods for it.

2006-04-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgCMatrix.R: add  storage.mode(.) <- "double" for "matrix"
	arguments, such that M %*% 1:6 now works
	* Tests/matprod.R: test the above

2006-04-03  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmer.R (qqmath,ranef.lmer-method): added a qqmath method for
	the ranef.lmer class.

	* R/AllClass.R, NAMESPACE, R/lmer.R: Added a postVar generic and
	methods to extract the posterior variances from the bVar slot.

2006-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dtCMatrix.R: allow coercion from  dgC* to triangular (dtC*)
	* R/dsCMatrix.R: and symmetric (dsC*) 'Csparse' matrices.

	* R/Tsparse.R: Tsparse* -> Csparse* coercion now works and is tested in
	* tests/simple: (extended)

	* R/sparseMatrix.R (isTriangular): now using much improved
	* R/Auxiliaries.R (isTriC): new triangularity check for *CMatrix

2006-03-23  Douglas Bates  <bates@stat.wisc.edu>

	* src/dsyMatrix.c (dsyMatrix_as_dspMatrix): Propagate DimNames
	(problem report from Franklin Parlamis).  This should be done
	generally.

2006-03-21  Douglas Bates  <bates@stat.wisc.edu>

	* R/AllClass.R,lmer.R: Change the name of the lmer.ranef class to
	ranef.lmer (like summary.lmer).  Add the coef.lmer class and
	update the plot methods.

2006-03-20  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmer.R (resid and ranef methods):  Added methods for the
	"residuals" and "resid" generic but only for linear mixed model
	fits.  Changed the ranef method to return a list of data frames so
	that the plot methods now work.

2006-03-16  Douglas Bates  <bates@bates2>

	* src/dpoMatrix.c (dpoMatrix_chol): Require n > 0 in call to
	dpotrf - otherwise the BLAS on Mac OS X complains and quits.

	* DESCRIPTION (Date): New release

2006-03-15  Martin Maechler  <maechler@stat.math.ethz.ch>
