@@ -1,3 +1,11 @@
+2006-04-15  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/cs.[ch],src/cs_utils.[ch] : Added Tim Davis' CSparse library
+	in cs.[ch] and utilities to interface to that code in cs_utils.[ch].
+
+	* R/dtCMatrix.R, src/dtCMatrix.[ch] : CSparse-based solve methods
+	for the dtCMatrix class.
+	
 2006-04-12  Douglas Bates  <bates@stat.wisc.edu>
 
 	* R/pedigree.R, R/AllClass.R, NAMESPACE: added a pedigree class
